<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.androidquizapp.QuizActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/basic_horizontal_margin"
            android:orientation="vertical">

            <!-- Question 1 -->

            <TextView
                style="@style/StyleForGuizQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q1_rb_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dp" />

                <RadioButton
                    android:id="@+id/q1_rb_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sp" />

                <RadioButton
                    android:id="@+id/q1_rb_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/px" />

                <RadioButton
                    android:id="@+id/q1_rb_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dpi" />
            </RadioGroup>

            <!-- Question 2 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StyleForGuizQuestion"
                android:text="@string/question_2" />

            <CheckBox
                android:id="@+id/q2_checkbox_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/float_answer" />

            <CheckBox
                android:id="@+id/q2_checkbox_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/double_answer" />

            <CheckBox
                android:id="@+id/q2_checkbox_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_answer" />

            <CheckBox
                android:id="@+id/q2_checkbox_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boolean_answer" />


            <!-- Question 3 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StyleForGuizQuestion"
                android:text="@string/question_3" />

            <EditText
                android:id="@+id/q3_editTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/put_your_answer_here"
                android:inputType="text" />

            <!-- Question 4 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StyleForGuizQuestion"
                android:text="@string/question_4" />

            <CheckBox
                android:id="@+id/q4_checkbox_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linearlayout_answer" />

            <CheckBox
                android:id="@+id/q4_checkbox_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relativelayout_answer" />

            <CheckBox
                android:id="@+id/q4_checkbox_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_answer" />

            <CheckBox
                android:id="@+id/q4_checkbox_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numberview_answer" />

            <!-- Question 5 -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StyleForGuizQuestion"
                android:text="@string/question_5_what_method_do_you_use_for_checking_if_checkbox_is_marked" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/q5_rb_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ismarked_answer_option" />

                <RadioButton
                    android:id="@+id/q5_rb_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ischecked_answer_option" />

                <RadioButton
                    android:id="@+id/q5_rb_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ischecket_answer_option" />

                <RadioButton
                    android:id="@+id/q5_rb_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/istrue_answer_option" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/check_answers"
            android:backgroundTint="@color/startButtonColor"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>
