<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.androidquizapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/main_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcomeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome_slogan"
                    android:textSize="@dimen/size_of_welcome_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/scoreSection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/vertical_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/avatar"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:src="@drawable/avatar" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/basic_horizontal_margin"
                            android:orientation="vertical"
                            android:weightSum="5">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_gravity="center"
                                android:layout_weight="2.7"
                                android:text="@string/current_score"
                                android:textColor="?android:attr/textColorTertiary"
                                android:textSize="30sp"
                                android:textStyle="bold" />

                            <RatingBar
                                style="?android:attr/ratingBarStyleIndicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="0.1"
                                android:rating="4" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="1.9"
                                android:text="@string/score_slogan"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <!--TextView
                    android:id="@+id/bugs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/mascots_green_guys"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="@dimen/size_of_mascots_green_guys" /-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_width"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:background="@android:color/darker_gray">

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/StyleForDescriptionTextViews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/binary_numbers_64"
                        android:text="@string/answer_10_questions" />

                    <TextView
                        style="@style/StyleForDescriptionTextViews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/list"
                        android:text="@string/the_quiz_contains" />

                    <TextView
                        style="@style/StyleForDescriptionTextViews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/trophy_64"
                        android:text="@string/the_result_you_will_post" />

                    <TextView
                        style="@style/StyleForDescriptionTextViews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/flag_64"
                        android:text="@string/before_start" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_width"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:background="@android:color/darker_gray">

                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:text="Enter your name"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/vertical_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:backgroundTint="@color/startButtonColor"
            android:text="@string/start_button_txt"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>
